# softrender

./: .gitignore  .gitmodules  BUILD.gn  LICENSE  README.md  buildenv.bat
include/: context.h  main.h  platform.h  types.h  window.h
src/: main.c  typefuncs.c
src/win32/: context.c  globals.c  util.c  window.c
