#  Root build definitions
#
#  Copyright 2021 MobSlicer152
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

executable("softrender") {
  include_dirs = [
    "//deps/include",
    "//deps/shardc2/libc/include",
    "include",
  ]

  sources = [
    "include/context.h",
    "include/platform.h",
    "include/types.h",
    "include/window.h",
    "src/main.c",
    "src/typefuncs.c",
    "src/win32/context.c",
    "src/win32/globals.c",
    "src/win32/window.c",
  ]

  deps = [
    "//deps/shardc2/libc:c",
    "//deps/shardc2/libc:crt0",
  ]
}
